--- a/prism.css
+++ b/prism.css
@@ -134,18 +134,45 @@ pre[class*="language-"] {
 }
 
 hr {
-    border: none;
-    border-top: 3px double #333;
-    color: #333;
+    //border: none;
+    //border-top: 3px double #333;
+    //color: #333;
+    //height: 5px;
+    //text-align: center;
+    
     overflow: visible;
+	
+    outline: 0;
+    border: 0;
+    color: black;
     text-align: center;
-    height: 5px;
+    height: 1.5em;
+    opacity: .5;
 }
 
 hr:after {
-    background: #fff;
+    //background: #fff;
+    //content: attr(data-content);
+    //padding: 0 4px;
+    //position: relative;
+    //top: -13px;
+	
     content: attr(data-content);
-    padding: 0 4px;
     position: relative;
-    top: -13px;
+    display: inline-block;
+    color: black;
+    padding: 0 .5em;
+    line-height: 1.5em;
+    color: #818078;
+    background-color: #fcfcfa;
+}
+
+hr:before {
+    content: '';
+    background: linear-gradient(to right, transparent, #818078, transparent);
+    position: absolute;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    height: 1px;
 }
