--- a/prism.css
+++ b/prism.css
@@ -133,6 +133,12 @@ pre[class*="language-"] {
 	cursor: help;
 }
 
+html {
+      	background-image: url("BG.jpg");
+      	background-size: cover;
+      	background-repeat: no-repeat;
+}
+
 .hr-text {
         line-height: 1em;
         position: relative;
@@ -168,6 +174,7 @@ hr:after {
 h3.dif{
         text-align: center;
         font-size: 21px;
+	color: white;
 }
 
 .coluna{
@@ -175,6 +182,7 @@ h3.dif{
         padding-left: 10px;
         padding-right: 10px;
         height: 100%;
+	background-color: white;
 }
 
 #direita {
