--- a/prism.css
+++ b/prism.css
@@ -134,7 +134,7 @@ pre[class*="language-"] {
 }
 
 html {
-      	background-image: url("BG.jpg");
+      	background-image: url("https://rawcdn.githack.com/EddBacelar/LinksCodes/972932fbda453573ed72eb8e979c9576bd3d6c8a/BG.jpg");
       	background-size: cover;
       	background-repeat: no-repeat;
 }
